[gd_scene load_steps=3 format=2]

[ext_resource path="res://User Interface/Style/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 4.0
margin_right = -10.0
margin_bottom = -4.0
custom_constants/separation = 5

[node name="Open_Tab_Button" type="Button" parent="VBox"]
margin_right = 1004.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Open"

[node name="TabContainer" type="TabContainer" parent="VBox"]
margin_top = 42.0
margin_right = 1004.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Tadd" type="Tabs" parent="VBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tab_Selector" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Tab_Selector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Tab_Selector/VBoxContainer"]
margin_right = 984.0
margin_bottom = 31.0
custom_constants/separation = 50
alignment = 1

[node name="WIP" type="Label" parent="Tab_Selector/VBoxContainer/HBoxContainer"]
margin_right = 467.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "WIP"
align = 1

[node name="Finished" type="Label" parent="Tab_Selector/VBoxContainer/HBoxContainer"]
margin_left = 517.0
margin_right = 984.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Finished"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Tab_Selector/VBoxContainer"]
margin_top = 35.0
margin_right = 984.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Tab_Selector/VBoxContainer/HBoxContainer2"]
margin_right = 490.0
margin_bottom = 501.0
size_flags_horizontal = 3

[node name="WIP_Container" type="VBoxContainer" parent="Tab_Selector/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 490.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="Tab_Selector/VBoxContainer/HBoxContainer2"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 501.0
size_flags_horizontal = 3

[node name="Finished_Container" type="VBoxContainer" parent="Tab_Selector/VBoxContainer/HBoxContainer2/ScrollContainer2"]
margin_right = 490.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Tab_Selector/VBoxContainer"]
margin_top = 540.0
margin_right = 984.0
margin_bottom = 580.0

[node name="Button" type="Button" parent="Tab_Selector/VBoxContainer/HBoxContainer3"]
margin_right = 490.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Add new"

[node name="Button2" type="Button" parent="Tab_Selector/VBoxContainer/HBoxContainer3"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Close"
[connection signal="pressed" from="VBox/Open_Tab_Button" to="." method="open_tab_selector" binds= [ true ]]
[connection signal="pressed" from="Tab_Selector/VBoxContainer/HBoxContainer3/Button" to="." method="open_tab" binds= [ "new" ]]
[connection signal="pressed" from="Tab_Selector/VBoxContainer/HBoxContainer3/Button2" to="." method="open_tab_selector" binds= [ false ]]
